fixed all preview of the form which was not showing before in the sidepanel.

--- a/client/src/styles/Form.css
+++ b/client/src/styles/Form.css
@@ -11,6 +11,7 @@
 }
 
 .__form-field {
+    width: 100%;
     padding: 8px;
     /* border: 1px solid red; */
     display: flex;
@@ -40,6 +41,7 @@
 }
 
 .__form-input {
+    width: 100% !important;
     padding: 8px;
     border: none;
     border-radius: 5px;
